add: script tag to load analytics script

--- a/3.x/index.html
+++ b/3.x/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/print.css" media="print" />
     <script src="./js/apache-maven-fluido-1.8.min.js"></script>
+    <script type="text/javascript" src="https://logging.apache.org/js/analytics.js"></script>
   </head>
   <body class="topBarDisabled">
     <div class="container-fluid">
